fix horizontal scroll

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -66,7 +66,7 @@
   }
 
   #nav {
-    display: block;
+    display: none;
     position: absolute;
     top: 0;
     right: -50px;
@@ -79,7 +79,7 @@
   }
 
   #nav.nav-active {
-    visibility: visible;
+    display: block;
     width: 100%;
     right: 0;
   }
